correct gradle settings, correct imports